*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 0.5.2 ===

=== 0.5.1 ===
* Updated code to match lltl library headers.
* Better integration with system::follow_url() routine.
* Added automatic style creation from XML schema.
* Added simple language configuration support by the tk::Schema class.
* Fixed allocation for invisible widgets inside the tk::Grid container.
* Updated behaviour of TextDataSink to be more memory-effective.
* Property 'size_constraints' renamed to 'constraints' for tk::Align and tk::Group widgets.
* Added 'set_horizontal' and 'set_vertical' methods to the embedding property.
* Fixed crash on empty tk::Grid container, added constraints() property to the tk::Grid widget.
* Added parse() method to all enumeration properties.
* Fixed knob behaviour which didn't trigger SLOT_CHANGE event when dragging knob's scale.
* Added ipadding() property for internal padding of the tk::Group widget.
* Fixed bugs reladed to SLOT_CHANGE notification delivery for tk::Switch widget.
* Added drawing mode for the widget that allows to switch between different kinds of widget look.
* Added basic background color inheritance support to widgets.
* Rendering of graph widget has been fixed and enhanced with "border.flat" property.
* Replaced text_border property for tk::Group widget with text_padding property.
* Added heading property for tk::Group widget.
* Replaced text_border property for tk::ComboGroup widget with text_padding property.
* Added heading property for tk::ComboGroup widget.
* Fixed missing builtin styles for tk::ComboGroup widget.
* Added spin_spacing property to tk::ComboGroup widget.
* Added 'balance_color', 'balance_color_custom', 'flat' and 'scale_marks' properties to the tk::Knob widget.
* Added font scaling feature to the tk::Font property.