@@ -65,7 +65,8 @@ namespace lsp
             public:
                 status_t            parse(const char *value);
                 status_t            parse(const LSPString *value);
-                inline ssize_t      set_index(ssize_t v)        { return set(v);            };
+                inline ssize_t      index() const               { return nValue;            }
+                inline ssize_t      set_index(ssize_t v)        { return set(v);            }
         };
     }
 }
