@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 0.5.2 ===
+* Bugfixes for the tk::GraphDot widget.
 
 === 0.5.1 ===
 * Updated code to match lltl library headers.
